feat(api): add abort upload endpoint (#20)
